--- a/PAF-514-Codethrough.html
+++ b/PAF-514-Codethrough.html
@@ -2842,7 +2842,7 @@ perfect candidate when it comes to demonstrating the uses of
 <div id="loading-the-packages-and-data-set" class="section level3">
 <h3>Loading the Packages and Data Set:</h3>
 <p>As with most packages, <code>quanteda</code> is often used alongside
-other packages such as or to help with the data processing and analysis.
+other packages such as <code>readtext</code> or <code>spacyr</code> to help with the data processing and analysis.
 In this code-through, we will be using <code>dplyr</code>,
 <code>pander</code>, and <code>tidyverse</code> to help with formatting
 certain data sets and cleaning up the results of the coding chunks.</p>
